--- a/index.html
+++ b/index.html
@@ -1,7 +1,41 @@
-<!doctype html>
-<html>
-    <head> My name is khaled</head>
-    <h1> wlecome<h1>
-    <h2> this is my webpage<h1>
-<img src="https://www.chicagotribune.com/resizer/JObNJBlW366Xyld0dstfTyU1oSk=/800x533/top/arc-anglerfish-arc2-prod-tronc.s3.amazonaws.com/public/IUIWOOMN4JGILHKOHP2JQGN43M.jpg">
+<!DOCTYPE html>
+<html lang="en-us">
 
+<head>
+  <meta charset="UTF-8">
+  <title>CSS Stylesheets With Relative Paths</title>
+
+  <!-- This line is money! It points your HTML to the CSS file. -->
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
+</head>
+
+<body>
+  <header>
+    <h1>My Bio</h1>
+  </header>
+
+  <div class="container">
+
+    <section id="main-bio"> 
+
+      <h3>Khaled E Hammouda</h3>
+
+      <img id="bio-image" src="https://i.etsystatic.com/9356362/r/il/5776f2/1238462535/il_fullxfull.1238462535_mgts.jpg" alt="Khaled E Hammouda">
+
+      <p>  <a href=""></a></p>
+    </section>
+
+    <section id="contact-info">
+      <h2>Contact Info</h2>
+      <ul>
+        <li><strong>Email:</strong> <a href="#">khaledehammouda@icloud.com</a></li>
+        <li><strong>Github:</strong> <a href="#">@khaled158</a></li>
+        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+      </ul>
+    </section>
+  </div>
+
+</body>
+
+</html>
