--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
       <h3>Khaled E Hammouda</h3>
 
-      <img id="bio-image" src="https://i.etsystatic.com/9356362/r/il/5776f2/1238462535/il_fullxfull.1238462535_mgts.jpg" alt="Khaled E Hammouda">
-
+      <img id="bio-image" src="https://i.esystatic.com/9356362/r/il/5776f2/1238462535/il_fullxfull.1238462535_mgts.jpg" alt="Khaled E Hammouda">
+t
       <p>  <a href=""></a></p>
     </section>
 
